CHANGES

release 80.8
 - fix memory leak in the samplesheet driver for st::api::lims -
   pass data hash by reference

release 80.7
 - change reference repository host

release 80.6
 - reenable and clean up cBot monitoring
 - try to avoid recursion in st::api::lims
 - cope with no reference genome info in XML
 - provisions for ml_warehouse driver
 - change host for development tracking server
 - when building the package, change version in existing directories only

release 80.5
 - remove redundant status update method from DBIx run_lane table binding
 - remove unused methods from npg::api::xx objects
 - remove auto-change of run statuses RT#420151
 - status monitor enhancements RT#420193:
     cope with runfolder move from outgoing to analysis
     on detecting LatestSummary creation, check for existing status files
       in the status folder

release 80.4
 - list of staging areas updated
 - reset monitor to use local disk if FTP to instrument fails

release 80.3
 - report sample_name, library_id etc at pool level if non-spike children
   give same value (to better cope with single plex pools)

release 80.2
 - cope with old path being reported for a directory when it is moved

release 80.1
 - glob expression fix for running on Ubuntu lucid with perl 5.14.2

release 80.0
 - DBIx run and run-lane status update: ensure duplicate records are not created
     allow to create a record for a status that is already current if the date
     of the new record is earlier that the current status date
 - status monitor bug fixes
 - daemon for status monitor watcher
 - propagate child/plex library level study data "alignment_in_bam" and 
   "separate_y_chromosome" to parent lane level as is done with 
   "contains_nonconsented_human" data

release 77.9
 - DBIx run and run-lane status update refactoring to accommodate passing
     status date and make setting these two status types symmetrical
 - initial code for monitoring status files